<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <ImageView
        android:contentDescription="@string/imageDescription"
        android:src="@drawable/main_menu"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        
        android:layout_marginRight="25dp"
   	/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical" >
        
<!--    layout_margin = space between menu text -->
        
        <TextView
            android:id="@+id/start_game"
            style="@style/MenuFont"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:text="@string/start_game" />

        <TextView
            android:id="@+id/how_to"
            style="@style/MenuFont"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:text="@string/How_to_play" />
        
        <TextView
            android:id="@+id/credits"
            style="@style/MenuFont"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:text="@string/Credits" />
        
        <TextView
            android:id="@+id/high_score"
            style="@style/MenuFont"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:text="@string/High_score" />

        <TextView
            android:id="@+id/quit_game"
            style="@style/MenuFont"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:text="@string/Quit_game" />
    
    </LinearLayout>
</RelativeLayout>
